--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -134,7 +134,7 @@ function handleCollabForm() {
       });
   });
 
-  $('#folder-collaborators .remove-btn').live('click', function(){
+  $('#folder-collaborators .remove-btn').live('click', function(event){
     event.preventDefault();
 
     var $removeBtn = $(this);
