--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -258,6 +258,7 @@
               Add a collaborator
             </label>
             <input type="text" class="fit" placeholder="Enter username / email" name="collab_user" id="collaborator-id" />
+            <input type="submit" class="hidden" />
           </div>
           <div style="clear:both"></div>
         </form>
