Error handling FTW!
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -253,11 +253,12 @@
 
         </ul>
         <form id="collab-form" style="display:none;">
-          <div class="collab-group">
+          <div class="collab-group control-group">
             <label class="announce" for="collaborator-id">
               Add a collaborator
             </label>
             <input type="text" class="fit" placeholder="Enter username / email" name="collab_user" id="collaborator-id" />
+            <small class="error red"></small>
             <input type="submit" class="hidden" />
           </div>
           <div style="clear:both"></div>
