changed to placeholder to username
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -257,7 +257,7 @@
             <label class="announce" for="collaborator-id">
               Add a collaborator
             </label>
-            <input type="text" class="fit" placeholder="Enter username / email" name="collab_user" id="collaborator-id" />
+            <input type="text" class="fit" placeholder="Enter username" name="collab_user" id="collaborator-id" />
             <small class="error red"></small>
             <input type="submit" class="hidden" />
           </div>
