Inf scroll frontend done!
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -538,6 +538,10 @@ footer {
   margin: 0 auto;
 }
 
+.centered-text {
+  text-align: center;
+}
+
 .hidden {
   display: none;
   visibility: hidden;
