--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -2,173 +2,176 @@
 <%
 # this layout view is pretty disgusting, but the block variable's scope is limited to here, so the entirety of the content is stuck in this file
 %>
-<div class="whitebox" id="feed">
+<div>
+	<div class="whitebox" id="feed">
 
-	<div style="margin-top:-15px"></div>
+		<div style="margin-top:-15px"></div>
 
-	<% if true %>
+		<% if true %>
 
-		<%
-
-		#debugger
-
-		fids = current_teacher.feed_ids.clone
-		if fids.nil? || fids[0].nil?
-			feed = Feed.new(:owner => current_teacher.id.to_s,
-							:fclass => 0)
-			feed.save
-			fids[0] = feed.id.to_s
-			current_teacher.update_attribute(:feed_ids, fids)
-		else
-			feed = Feed.find(current_teacher.feed_ids[0])
-		end
-
-		feedhash = feed.html(current_teacher.id.to_s)#['html'].html_safe 
-
-		%>
-
-		<%= feedhash['html'].html_safe %>
-
-		<input id="feedCursor" type="hidden" value="<%= feedhash['logid'] %>" />
-
-	<% else %>
-
-	<% @subsfeed.each do |f|
-
-		f = f.size==1 ? f.first : { :model=>f.first[:model], :owner=>f.first[:owner], :log=>f.first[:log], :array=>f }
-
-		@f = f
-
-		%>
-
-		<div class="newsitem">
-			<div class="imgarea">
-				<a href="<%= "/#{f[:owner].username}" %>">
-					<img src="<%= teacher_thumb_md(f[:owner]) %>" >
-				</a>
-			</div>
 			<%
-			case f[:log]['method'].to_s
-			when "createfile" %>
 
-				<div class="feedcontent">
+			#debugger
 
-					<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+			fids = current_teacher.feed_ids.clone
+			if fids.nil? || fids[0].nil?
+				feed = Feed.new(:owner => current_teacher.id.to_s,
+								:fclass => 0)
+				feed.save
+				fids[0] = feed.id.to_s
+				current_teacher.update_attribute(:feed_ids, fids)
+			else
+				feed = Feed.find(current_teacher.feed_ids[0])
+			end
 
-					<%= render 'layouts/feedpieces/createfileheader' %>
+			feedhash = feed.html(current_teacher.id.to_s)#['html'].html_safe
 
-					<% end %>
+			%>
 
-					<%= render 'layouts/feedpieces/feedcontent' %>
+			<%= feedhash['html'].html_safe %>
 
-				</div>
+			<input id="feedCursor" type="hidden" value="<%= feedhash['logid'] %>" />
 
-			<% when "createcontent" %>
+		<% else %>
 
-				<div class="feedcontent">
+		<% @subsfeed.each do |f|
 
-					<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+			f = f.size==1 ? f.first : { :model=>f.first[:model], :owner=>f.first[:owner], :log=>f.first[:log], :array=>f }
 
-					<%= render 'layouts/feedpieces/createcontentheader' %>
+			@f = f
 
-					<% end %>
+			%>
 
-					<%= render 'layouts/feedpieces/feedcontent' %>
-
-				</div>
-
-			<% when "update" %>
-
-				<div class="feedcontent">
-
-					<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
-
-					<%= render 'layouts/feedpieces/updateheader' %>
-
-					<% end %>
-
-					<%= render 'layouts/feedpieces/feedcontent' if !f[:array] %>
-
-				</div>
-
-			<% when "forkitem" %>
-
-				<div class="feedcontent">
-
-					<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
-
-					<%= render 'layouts/feedpieces/forkitemheader' %>
-
-					<% end %>
-
-					<%= render 'layouts/feedpieces/feedcontent' %>
-
-				</div>
-
-			<% when "favorite" %>
-
-				<div class="feedcontent">
-
-					<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
-
-					<%= render 'layouts/feedpieces/favoriteheader' %>
-
-					<% end %>
-
-					<%= render 'layouts/feedpieces/feedcontent' %>
-
-				</div>
-
-			<% when "setpub" %>
-
-				<div class="feedcontent">
-
-					<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
-
-					<%= render 'layouts/feedpieces/setpubheader' %>
-
-					<% end %>
-
-					<%= render 'layouts/feedpieces/feedcontent' %>
-
-				</div>
-
-			<% when 'sub' %>
-
-				<% # fix this!!!
-
-				@subscribee = Teacher.where(:username => /^#{Regexp.escape(f[:log].params['username'].to_s)}$/i).first %>
-
-				<div class="feedcontent">
-
-					<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
-
-					<%= render 'layouts/feedpieces/subheader' %>
-
-					<% end %>
-
-					<%= render 'layouts/feedpieces/feedsub' %>
-
-				</div>
-
-			<% end %>
-			<div style="clear:both"></div>
-		</div>
-		<% if !f[:log][:full].nil? %>
 			<div class="newsitem">
 				<div class="imgarea">
-					<a href="#"></a>
+					<a href="<%= "/#{f[:owner].username}" %>">
+						<img src="<%= teacher_thumb_md(f[:owner]) %>" >
+					</a>
 				</div>
-				<div class="feedcontent">
-					<div class="thetitle">
-						<a href="<%= "/#{f[:owner].username}" %>">See more from <%= f[:owner].username %></a>
+				<%
+				case f[:log]['method'].to_s
+				when "createfile" %>
+
+					<div class="feedcontent">
+
+						<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+
+						<%= render 'layouts/feedpieces/createfileheader' %>
+
+						<% end %>
+
+						<%= render 'layouts/feedpieces/feedcontent' %>
+
 					</div>
-				</div>
+
+				<% when "createcontent" %>
+
+					<div class="feedcontent">
+
+						<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+
+						<%= render 'layouts/feedpieces/createcontentheader' %>
+
+						<% end %>
+
+						<%= render 'layouts/feedpieces/feedcontent' %>
+
+					</div>
+
+				<% when "update" %>
+
+					<div class="feedcontent">
+
+						<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+
+						<%= render 'layouts/feedpieces/updateheader' %>
+
+						<% end %>
+
+						<%= render 'layouts/feedpieces/feedcontent' if !f[:array] %>
+
+					</div>
+
+				<% when "forkitem" %>
+
+					<div class="feedcontent">
+
+						<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+
+						<%= render 'layouts/feedpieces/forkitemheader' %>
+
+						<% end %>
+
+						<%= render 'layouts/feedpieces/feedcontent' %>
+
+					</div>
+
+				<% when "favorite" %>
+
+					<div class="feedcontent">
+
+						<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+
+						<%= render 'layouts/feedpieces/favoriteheader' %>
+
+						<% end %>
+
+						<%= render 'layouts/feedpieces/feedcontent' %>
+
+					</div>
+
+				<% when "setpub" %>
+
+					<div class="feedcontent">
+
+						<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+
+						<%= render 'layouts/feedpieces/setpubheader' %>
+
+						<% end %>
+
+						<%= render 'layouts/feedpieces/feedcontent' %>
+
+					</div>
+
+				<% when 'sub' %>
+
+					<% # fix this!!!
+
+					@subscribee = Teacher.where(:username => /^#{Regexp.escape(f[:log].params['username'].to_s)}$/i).first %>
+
+					<div class="feedcontent">
+
+						<% cache("#{signed_in? ? current_teacher.id.to_s : @teacher.id.to_s}#{f[:log].id}", :expires_in => 1.minutes) do %>
+
+						<%= render 'layouts/feedpieces/subheader' %>
+
+						<% end %>
+
+						<%= render 'layouts/feedpieces/feedsub' %>
+
+					</div>
+
+				<% end %>
 				<div style="clear:both"></div>
 			</div>
+			<% if !f[:log][:full].nil? %>
+				<div class="newsitem">
+					<div class="imgarea">
+						<a href="#"></a>
+					</div>
+					<div class="feedcontent">
+						<div class="thetitle">
+							<a href="<%= "/#{f[:owner].username}" %>">See more from <%= f[:owner].username %></a>
+						</div>
+					</div>
+					<div style="clear:both"></div>
+				</div>
+			<% end %>
 		<% end %>
-	<% end %>
 
-	<% end %>
+		<% end %>
 
+	</div>
+	<p class="centered-text"><small class="warning" style="display:none;">You've reached the end of your feed.</small></p>
 </div>
