fixed contentview img tag
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -30,7 +30,7 @@
 <% elsif @binder.current_version.img? %>
 
 	<center><%= #link_to(	image_tag(@binder.current_version.img_contentview.url, :class => "embeddrop"),
-				link_to(	image_tag(Binder.contentview(@binder), :class => "embeddrop"),
+				link_to(	"<img src=\"#{Binder.contentview(@binder)}\" class=\"embeddrop\" />".html_safe,
 					@binder.format == 1 ? named_binder_route(@binder, "download") : @binder.current_version.data,
 					:target => "_blank") %></center>
 
