removed collab box if not self and no collabs
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -227,7 +227,7 @@
         <ul class="collaborators">
           <% if @collaborators.empty? %>
 
-            <div class="empty-tog fortags">You haven’t added any collaborators…yet!</div>
+            <div class="empty-tog fortags" <%= "style=\"display:none\"" if !@is_self %> >You haven’t added any collaborators…yet!</div>
 
           <% else %>
 
