--- a/app/views/layouts/feedpieces/wrappers/_createfile.html.erb
+++ b/app/views/layouts/feedpieces/wrappers/_createfile.html.erb
@@ -1,3 +1,3 @@
 <div class="thetitle">
-	<a href="<%= @wholink %>"><%= "#{@who.fname} #{@who.lname}" %></a> added <%= @howmany %> file<%= @mult ? 's' : ''%> to <a href="<%= named_binder_route(@where) %>"><%= @where.title %></a> [[[TIMESTAMP]]] ago.
+	<a href="<%= @wholink %>"><%= "#{@who.fname} #{@who.lname}" %></a> added <%= @howmany %> file<%= @mult ? 's' : ''%><% if !@where.nil? %> to <a href="<%= named_binder_route(@where) %>"><%= @where.title %><% end %></a> [[[TIMESTAMP]]] ago.
 </div>
