--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -1,6 +1,6 @@
 
 		<% if @binder.current_version.scootpad? %>
-		<div style="width:710px;height:90px;margin-left:-15px;margin-top:-15px;margin-bottom:-15px">
+		<div style="width:710px;height:90px;margin-left:-15px;margin-top:-15px;margin-bottom:-15px;z-index:9999">
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-7036745116663906";
 /* monmake */
